[fix] 開発環境のURLのままあげちった！

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="http://127.0.0.1:5500/spa.js"></script>
+    <script src="https://if-kazuki.github.io/spa.js"></script>
   </head>
 
   <body>
@@ -15,7 +15,7 @@
       // 戻り値はDOMを入れ替える関数
       const { Link } = new SPA(
         // baseUrl
-        "http://127.0.0.1:5500",
+        "https://if-kazuki.github.io/",
         // URLごとにどのコンポーネントを表示させたいか
         {
           config: {
