--- a/main/doc.html
+++ b/main/doc.html
@@ -1,11 +1,15 @@
 <text>
-  <h1 class="title">
-    documentation
-  </h1>
+  <title>documentation</title>
+  <h1 class="title">document</h1>
 
   <div class="url">
     <code class="code">https://if-kazuki.github.io/spa.js</code>
   </div>
+
+  <div class="explan">Lorem ipsum dolor sit amet.</div>
+  <code class="code">
+
+  </code>
 </text>
 
 <style>
@@ -14,15 +18,19 @@
     font-size: 64px;
     margin: 32px 0;
   }
-
   .url {
     text-align: center;
+    margin-bottom: 32px;
   }
-
   .code {
     background-color: #25292f;
     color: white;
     padding: 2px 8px;
     border-radius: 2px;
+  }
+  .explan {
+    width: 60vw;
+    min-width: 300px;
+    margin: 0 auto;
   }
 </style>
