--- a/404.html
+++ b/404.html
@@ -1,4 +1,17 @@
-<script src="http://127.0.0.1:3000/js-spa.js"></script>
-<script>
-  NotFound();
-</script>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Not Found</title>
+    <script src="https://if-kazuki.github.io/spa.js"></script>
+  </head>
+
+  <body>
+    <p>Not Found Page</p>
+    <script>
+      NotFound();
+    </script>
+  </body>
+</html>
