--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://if-kazuki.github.io/spa.js"></script>
   </head>
 
@@ -12,15 +13,12 @@
     <div id="root"></div>
     <!-- DOMの構造を定義 -->
     <script>
-      // 戻り値はDOMを入れ替える関数
-      const { Link } = new SPA(
+      // 戻り値はDOMを入れ替える関数 + 開発用のURLを変える関数
+      const { Link, devMode } = new SPA(
         // baseUrl
-        "https://if-kazuki.github.io/",
+        "https://if-kazuki.github.io",
         // URLごとにどのコンポーネントを表示させたいか
         {
-          config: {
-            "/": "config.html",
-          },
           header: {
             "/": "header.html",
           },
@@ -33,6 +31,7 @@
           },
         }
       );
+      // devMode("/doc");
     </script>
   </body>
 </html>
