--- a/main/index.html
+++ b/main/index.html
@@ -1,6 +1,8 @@
-<text>
+<top>
   <title>Top</title>
+</top>
 
+<text>
   <h1 class="title">hello world!!</h1>
   <div class="main">
     <a id="main-doc" class="main__link">Document</a>
