--- a/header/header.html
+++ b/header/header.html
@@ -1,6 +1,6 @@
 <text>
   <div class="header">
-    <a id="header-index" class="header__logo">spa.js</a>
+    <a id="header-index" class="header__logo">mysite.js</a>
   </div>
 </text>
 
