--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <script src="https://if-kazuki.github.io/spa.js"></script>
   </head>
 
   <body>
@@ -14,7 +14,7 @@
 
     <script>
       // DOMの構造を定義
-      SPA({
+      const { Link, Import, Cacher, DevMode } = SPA({
         header: {
           "/": "header.html",
         },
@@ -26,9 +26,6 @@
           "/": "footer.html",
         },
       });
-
-      // 必要な関数を取得
-      const { Link, Import, Cacher, DevMode } = window.SPA;
 
       // 開発者モード、ページの固定が可能
       // DevMode("/doc");
